--- a/pricing.css
+++ b/pricing.css
@@ -16,10 +16,17 @@
 }
 
 @media (min-width: 768px) {
+  .my-md-5 {
+    margin-bottom: 0rem !important;
+    /*por alguna razon estaba margin-bottom: 3rem !important;, daba un espacio en blanco en el footer xD*/
+  }
+
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
+
   }
 }
+
 .b-example-divider {
   width: 100%;
   height: 3rem;
@@ -74,6 +81,7 @@
   --bs-btn-active-bg: #5a23c8;
   --bs-btn-active-border-color: #5a23c8;
 }
+
 .bd-mode-toggle {
   z-index: 1500;
 }
@@ -82,7 +90,11 @@
 
 /** Iker Acevedo */
 
-a img{
+body {
+  overflow-x: hidden;
+}
+
+a img {
   width: 160px;
 }
 
@@ -91,6 +103,10 @@ a img{
   color: white;
 }
 
-.text-bg-danger{
+.text-bg-danger {
   background-color: #e50914 !important;
+}
+
+footer {
+  background-color: #f3f3f3;
 }
